--- a/style.css
+++ b/style.css
@@ -14,12 +14,41 @@ h2{
   text-align: center;
 }
 h3{
-  color: rgb(2, 2, 2);
+  color: rgb(235, 245, 176);
   font-family: Arial, Helvetica, sans-serif;
   font-style: oblique;
   }
+
 .BarraH {
   background: #799F0C;  /* fallback for old browsers */
   background: -webkit-linear-gradient(to right, #ACBB78, #799F0C);  /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to right, #ACBB78, #799F0C); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
    }
+
+   nav {
+    background: green;
+    color: red;
+}
+
+li {
+    background: rgb(231, 212, 212);
+}
+
+a:hover {
+    color: rgb(176, 201, 109);
+}
+
+menu {
+  background: #d9d7d5;
+  padding: 0.75rem;
+  overflow-y: scroll;
+  white-space: nowrap;
+}
+
+span {
+  background: #3e5c5f;
+  color: #ffffff;
+  display: inline-block;
+  margin: 0.25rem;
+  padding: 0.5rem;
+}
