--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+*{
+  font-family: Arial;
+  color: #ffffff;
+}
+
 body {
   background: #536976;  /* fallback for old browsers */
   background: -webkit-linear-gradient(to right, #292E49, #536976);  /* Chrome 10-25, Safari 5.1-6 */
@@ -51,4 +56,12 @@ span {
   display: inline-block;
   margin: 0.25rem;
   padding: 0.5rem;
+}
+
+.descripcion{
+  display: block;
+}
+
+.entrada{
+  display: block;
 }
