--- a/style.css
+++ b/style.css
@@ -31,12 +31,17 @@ h3{
    }
 
    nav {
-    background: green;
-    color: red;
+   /* background: rgb(146, 206, 146);*/
+    color: rgb(255, 255, 255);
 }
 
 li {
-    background: rgb(231, 212, 212);
+  /*background: rgb(82, 75, 75);*/
+  background: #3e5c5f;
+  color: #ffffff;  
+  display: inline-block;
+  margin: 0.25rem;
+  padding: 0.5rem;
 }
 
 a:hover {
