--- a/style.css
+++ b/style.css
@@ -1,12 +1,13 @@
 *{
-  font-family: Arial;
+  font-family: 'Barlow', sans-serif;
   color: #ffffff;
 }
 
+
 body {
-  background: #536976;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #292E49, #536976);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #292E49, #536976); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: #141E30;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to left, #243B55, #141E30);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to left, #243B55, #141E30); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */  
 
 }
 
@@ -19,6 +20,7 @@ h1{
 h2{
   color: #ffffff;
   text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 h3{
@@ -27,13 +29,7 @@ h3{
   font-style: oblique;
   }
 
-nav {
-   /* background: rgb(146, 206, 146);*/
-    color: rgb(255, 255, 255);
-}
-
 li {
-  /*background: rgb(82, 75, 75);*/
   background: #3e5c5f;
   color: #ffffff;  
   display: inline-block;
@@ -43,6 +39,8 @@ li {
 
 a:hover {
     color: rgb(176, 201, 109);
+    font-family: Arial, Helvetica, sans-serif;
+
 }
 /*
 menu {
@@ -69,7 +67,7 @@ span {
 } */
 
 table, th, td {
-  border: 1px solid black;
+  /*border: 1px solid black;*/
   display: inline-flexbox;
   padding: 2px;
 }
