--- a/style.css
+++ b/style.css
@@ -7,6 +7,15 @@
   width:100px;
   height:100px;
 }
+.mi-contenedor > div {
+ padding: 50px;
+}
+
+.container > div {
+  background: #0C6DFD;
+  border: 2px solid white;
+  padding: 15px;
+}
 body {
   background: #536976;  /* fallback for old browsers */
   background: -webkit-linear-gradient(to right, #292E49, #536976);  /* Chrome 10-25, Safari 5.1-6 */
@@ -25,18 +34,18 @@ h2{
   text-align: center;
 }
 
-h3{
-  color: rgb(235, 245, 176);
+h3, h4{
+  color: rgb(236, 253, 137);
   font-family: Arial, Helvetica, sans-serif;
   font-style: oblique;
   }
 
-nav {
+/*nav {
    color: rgb(255, 255, 255);
-}
+}*/
 
 li {
-  background: #3e5c5f;
+  background: #f3f5f5;
   color: #ffffff;  
   display: inline-block;
   margin: 0.25rem;
@@ -47,15 +56,32 @@ a:hover {
     color: rgb(176, 201, 109);
 }
 
-.renglon >div {
+.row >div {
   font-family: 'Roboto', sans-serif;
   font-size: medium;
   display: flexbox;
 }
-.columna > div{
+.col > div{
 display: flexbox;
 }
 .Resumen{
   display:flexbox;
 }
+#Datp{
+  display: block;
+  color: #ffffff;
+}
+#Res{
+  text-align: center;
+}
+.Divide {
+  color:#f3f5f5;
+}
 
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 48
+}
